# waver

./: Cargo.toml  LICENSE.md  README.md  cspell.json  dist-workspace.toml
crates/waver-cli/: Cargo.toml
crates/waver-cli/src/: main.rs
crates/waver-core/: Cargo.toml
crates/waver-core/src/: config.rs  device.rs  device_info.rs  format.rs  lib.rs  meters.rs
crates/waver-service/: Cargo.toml
crates/waver-service/src/: config.rs  env.rs  main.rs
scripts/: waver-startup.sh
