[package]
name = "waver-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version  ="2.14.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
waver-core = { path = "../waver-core", version = "0.1.0" }
