[package]
name = "waver-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for controlling the Wave XLR on linux."
readme = "../../README.md"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
homepage = "https://github.com/jacobtread/waver"
repository = "https://github.com/jacobtread/waver"


[[bin]]
name = "waver"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version  ="2.14.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
waver-core = { path = "../waver-core", version = "0.1.0" }
