[package]
name = "waver-core"
version = "0.2.0"
edition = "2024"
readme = "../../README.md"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
homepage = "https://github.com/jacobtread/waver"
repository = "https://github.com/jacobtread/waver"

[dependencies]
rusb = "0.9.4"
thiserror = "2.0.18"
