[package]
name = "waver-service"
version = "0.1.0"
edition = "2024"
description = "Background service for storing the Wave XLR settings on linux."
readme = "../../README.md"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
homepage = "https://github.com/jacobtread/waver"
repository = "https://github.com/jacobtread/waver"


[dependencies]
anyhow = "1"
indexmap = "2.14.0"
waver-core = { path = "../waver-core", version = "0.1.0" }
