[package]
name = "waver-service"
version = "0.2.0"
edition = "2024"
description = "Background service for storing the Wave XLR settings on linux."
readme = "../../README.md"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
homepage = "https://github.com/jacobtread/waver"
repository = "https://github.com/jacobtread/waver"


[dependencies]
# Properties map
indexmap = "2.14.0"

# Wave XLR device core
waver-core = { path = "../waver-core", version = "0.2.0" }

# Logging
log = "0.4.33"
env_logger = "0.11.11"
